--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 Changelog for Perl module ZeroMQ.
 
-0.02_02
+0.02_02 Sat Oct 30 2010 21:20 JST
+  - Update to work with zeromq2 master (as of 10/28)
+  - Added new constants
   - ZMQ_POLLIN callbacks used to pass the ZeroMQ::Message argument
-    to the callback, but this is error prone, so now the callback
+    to the callback function, but this is error prone, so now the callback
     does not receive anything
 
 0.02_01 Mon Sep 06 2010 19:20 JST
