--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changelog for Perl module ZeroMQ.
 
+0.11
+  - Make header, incpath, lib detection smarter.
+  - Include a section on how to install in the POD.
+
 0.10 Wed Apr 13 2011 10:30 JST
   - Use Module::Instsall::CheckLib
   - Silence test failures [https://github.com/lestrrat/ZeroMQ-Perl/issues/11]
