--- a/README
+++ b/README
@@ -49,6 +49,32 @@ SYNOPSIS ( LOW-LEVEL API )
         my $rv   = zmq_send( $sock, $msg, $flags );
         my $msg  = zmq_recv( $sock, $flags );
 
+INSTALLATION
+    If you have want to use libzmq registered with pkg-config:
+
+        perl Makefile.PL
+        make 
+        make test
+        make install
+
+    If you don't have pkg-config, and libzmq is installed: # under
+    /usr/local/libzmq ZMQ_HOME=/usr/local/libzmq \ perl Makefile.PL make
+    make test make install
+
+    If you want to customize include directories and such:
+
+        ZMQ_INCLUDES=/path/to/libzmq/include \
+        ZMQ_LIBS=/path/to/libzmq/lib \
+        ZMQ_H=/path/to/libzmq/include/zmq.h \
+            perl Makefile.PL
+        make
+        make test
+        make install
+
+    If you want to compile with debugging on:
+
+        perl Makefile.PL -g
+
 DESCRIPTION
     The "ZeroMQ" module is a wrapper of the 0MQ message passing library for
     Perl. It's a thin wrapper around the C API. Please read
