--- a/Changes
+++ b/Changes
@@ -1,8 +1,13 @@
 Changelog for Perl module ZeroMQ.
 
-0.11
-  - Make header, incpath, lib detection smarter.
+0.11 Fri Apr 15 2011 15:30 JST
+  - Make header, incpath, lib detection smarter. 
+    * Now supports pkg-config!
+    * Environment variables ZMQ_HOME, ZMQ_INCLUDES, ZMQ_LIBS are
+      honored. Please see POD for how to configure ZeroMQ.pm
   - Include a section on how to install in the POD.
+  - Remove usage of DOWNSTREAM/UPSTREAM, and connect inproc
+    sockets using PAIR
 
 0.10 Wed Apr 13 2011 10:30 JST
   - Use Module::Instsall::CheckLib
